Make opacity work on GTK2.  b=201209  r=bryner  sr=roc